infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: ticketing.local
    http:
      paths:
      - path: /api/users/?(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-srv
            port:
              number: 3000
  ingressClassName: nginx
